WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201317
Caret does not appear in text field inside a transformed, overflow: hidden container
https://bugs.webkit.org/show_bug.cgi?id=201317
Summary
Caret does not appear in text field inside a transformed, overflow: hidden co...
Wenson Hsieh
Reported
2019-08-29 16:04:18 PDT
Followup to <
https://bugs.webkit.org/show_bug.cgi?id=201287
>.
Attachments
Simple test case
(973 bytes, text/html)
2019-08-29 16:16 PDT
,
Wenson Hsieh
no flags
Details
Patch
(14.03 KB, patch)
2019-08-29 21:22 PDT
,
Wenson Hsieh
simon.fraser
: review+
Details
Formatted Diff
Diff
Patch for landing
(13.98 KB, patch)
2019-08-30 11:46 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-08-29 16:06:55 PDT
Comment hidden (obsolete)
<
rdar://problem/54859264
>
Wenson Hsieh
Comment 2
2019-08-29 16:16:29 PDT
Created
attachment 377650
[details]
Simple test case
Wenson Hsieh
Comment 3
2019-08-29 16:56:58 PDT
<
rdar://problem/54849701
>
Wenson Hsieh
Comment 4
2019-08-29 16:58:09 PDT
(In reply to Wenson Hsieh from
comment #3
)
> <
rdar://problem/54849701
>
I’m using this Radar instead of the imported one, since this is the report Pierre filed. It’s also earlier than the imported one.
Wenson Hsieh
Comment 5
2019-08-29 21:22:37 PDT
Created
attachment 377674
[details]
Patch
Wenson Hsieh
Comment 6
2019-08-30 11:27:33 PDT
Comment on
attachment 377674
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=377674&action=review
Thanks for the review!
> Source/WebCore/ChangeLog:18 > + field is now visible. Somce RenderLayer::offsetFromAncestor doesn't take transforms into account when we try to
Oops, “Somce" => “Since” Going to fix this typo before I land.
Wenson Hsieh
Comment 7
2019-08-30 11:46:46 PDT
Created
attachment 377736
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2019-08-30 12:29:03 PDT
Comment on
attachment 377736
[details]
Patch for landing Clearing flags on attachment: 377736 Committed
r249339
: <
https://trac.webkit.org/changeset/249339
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug